# python-poetry-template

./: .flake8  Dockerfile  README.md  makefile  pyproject.toml
scripts/: format-imports.sh  format.sh  lint.sh  test.sh
