[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["yuki-nishikawa <52784638+yuki-nishikawa@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
mypy = "^0.971"
isort = "^5.10.1"
flake8 = "^5.0.4"
autoflake = "^1.5.2"
pydantic = "^1.10.0"

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.black]
line-length = 131

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 131

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
