[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["yuki-nishikawa <52784638+yuki-nishikawa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mypy = "^0.971"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
autoflake = "^1.6.1"

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.black]
line-length = 131

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 131

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
