[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["yuki-nishikawa <52784638+yuki-nishikawa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.6.1"
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
autoflake = "^2.2.1"

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.black]
line-length = 131

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 131

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
